--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -1,11 +1,9 @@
 version: "1"
-project:
-  id: ""
 packages:
   - name: "db"
     path: "./db/sqlc"
-    queries: "./db/query"
-    schema: "./db/migration"
+    queries: "./db/query/"
+    schema: "./db/migration/"
     engine: "postgresql"
     emit_json_tags: true
     emit_prepared_queries: false
