--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,19 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:15.2-alpine
+        env:
+          POSTGRES_DB: simple_bank
+          POSTGRES_USER: root
+          POSTGRES_PASSWORD: admin
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
       - name: Check out code into Go module directory
         uses: actions/checkout@v3
@@ -20,6 +33,9 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: 1.20
+
+      - name: Run migrations
+        run: make migrateup
 
       - name: Test
         run: make test
