--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     services:
       postgres:
-        image: postgres:15.2-alpine
+        image: postgres:alpine3.17
         env:
           POSTGRES_DB: simple_bank
           POSTGRES_USER: root
