--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,9 @@ on:
 
 jobs:
   test:
+    name: Test
     runs-on: ubuntu-latest
+
     services:
       postgres:
         image: postgres:alpine3.17
@@ -28,14 +30,14 @@ jobs:
           --health-retries 5
 
     steps:
-      - name: Check out code into Go module directory
-        uses: actions/checkout@v3
-
-      - name: Set up Go
+      - name: Set up Go 1.x
         uses: actions/setup-go@v3
         with:
           go-version: ^1.19
         id: go
+        
+      - name: Check out code into Go module directory
+        uses: actions/checkout@v3
 
       - name: Install golang-migrate
         run: |
