--- a/app.env
+++ b/app.env
@@ -1,3 +1,4 @@
+ENVIRONTMENT=development
 DB_DRIVER=postgres
 DB_SOURCE=postgresql://root:admin@localhost:5432/simple_bank?sslmode=disable
 MIGRATION_URL=file://db/migration
