change container expose port

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,18 +7,20 @@ services:
       - POSTGRES_USER=root
       - POSTGRES_PASSWORD=admin
     ports:
-      - "5432:5432"
+      - "1026:5432"
     volumes:
       - postgres-volume:/var/lib/postgresql/data
   redis:
     image: redis:alpine3.17
+    ports:
+      - "1027:6379"
   api:
     build:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "1026:8080"
-      - "1027:9090"
+      - "1028:8080"
+      - "1029:9090"
     environment:
       - DB_SOURCE=postgresql://root:admin@postgres:5432/simple_bank?sslmode=disable
       - REDIS_ADDRESS=redis:6379
